--- a/Backend/templates/db.html
+++ b/Backend/templates/db.html
@@ -33,5 +33,6 @@
             <i><p>{{ actuator['type'] }} </p></i>
             <i><p>{{ actuator['state'] }} </p></i>
         </div>
+    {% endfor %}
 
 {% endblock %}
