--- a/Frontend/react_frontend/src/components/AdminPanel/AdminPanel.css
+++ b/Frontend/react_frontend/src/components/AdminPanel/AdminPanel.css
@@ -32,7 +32,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 40% 60%;
     grid-gap: 10px;
     padding: 10px;
 }
